force-app/main/default/objects/Zahlung__c/Zahlung__c.object-meta.xml
<CustomObject>
    <label>Zahlung</label>
    <nameField>
        <displayFormat>Z-{YYYY}-{MM}-{DD}-{0000000}</displayFormat>
        <label>Zahlung Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zahlungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>