force-app/main/default/objects/Zahlung__c/fields/AccountingText__c.field-meta.xml
<CustomField>
    <fullName>AccountingText__c</fullName>
    <label>Buchungstext</label>
    <type>TextArea</type>
</CustomField>