force-app/main/default/objects/Zahlung__c/fields/MaBVRechnung__c.field-meta.xml
<CustomField>
    <fullName>MaBVRechnung__c</fullName>
    <label>MaBV Rechnung</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>MaBVRechnung__c.MaBVRechnungMaster__r.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Zahlungen</relationshipLabel>
    <relationshipName>ZahlungenMaBVRechnungen</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>