force-app/main/default/objects/Zahlung__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity which this Payment belongs to via MaBV records.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MaBV Zahlungen</relationshipLabel>
    <relationshipName>MabvPayments</relationshipName>
    <type>Lookup</type>
</CustomField>