force-app/main/default/objects/Zahlung__c/fields/UtilMabvRate__c.field-meta.xml
<CustomField>
    <fullName>UtilMabvRate__c</fullName>
    <description>Name of MaBV Rate which this Payment belongs to via Master-Detail-Relations.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; MaBVRechnung__r.MaBVRechnungMaster__r.MaBVRate__c, MaBVRechnung__r.MaBVRechnungMaster__r.MaBVRate__r.Name)</formula>
    <label>MaBV Rate</label>
    <type>Text</type>
</CustomField>